--- a/sudokuSolver/frontpage/templates/frontpage/front_page.html
+++ b/sudokuSolver/frontpage/templates/frontpage/front_page.html
@@ -75,7 +75,7 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4 font-weight-normal">스도쿠?<br> ez..<br> Just try!<br></h1>
-    <p class="lead font-weight-normal">명지대학교 공개 SW 실무 7조</p>
+    <p class="lead font-weight-normal">공대생이 스도쿠도 못 푸냐는 말에 만들어 봤습니다.</p>
     <p class="lead font-weight-normal" style="color: orange">Single Shot Sudoku Solver</p>a.k.a<br>
     <h2 style="color: orange">SSSS</h2>
     <a class="btn btn-outline-secondary" href="/solve/bytype">Type to Solve</a>
